src/python/fastapi/api/create/user/create_user_svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-v1-create-user-svc
  namespace: api
spec:
  selector:
    app: v1-create-user
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
